fix-gap on the left side on option input  on file input component

--- a/src/components/options-list-component/options-item-component/OptionsItemComponent.css
+++ b/src/components/options-list-component/options-item-component/OptionsItemComponent.css
@@ -22,7 +22,6 @@
 }
 
 .inputField {
-    padding: 0 0 1px;
     appearance: none;
     background: inherit;
     border: 0;
